samples/_failures_safe/1761508922_d8611a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69ef6a7e.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_69ef6a7e.c:145:5: error: expected expression at end of input
  145 |     printf("  Algorithm: %u\n",
      |     ^~~~~~
./samples/SAFE/__tmp_69ef6a7e.c:145:5: error: expected declaration or statement at end of input
